# ai-research-assistant

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml
data/eval/: research_assistant.json
data/sample_docs/: llm_overview.txt  rag_deep_dive.md
src/assistant/: __init__.py  cli.py  client.py  config.py  cost.py
src/assistant/agent/: __init__.py  executor.py  loop.py  planner.py  reflector.py
src/assistant/api/: __init__.py  app.py  deps.py  models.py  server.py  sse.py
src/assistant/api/routes/: chat.py  documents.py  research.py
src/assistant/eval/: __init__.py  dataset.py  harness.py  judge.py  metrics.py  report.py
src/assistant/memory/: __init__.py  persistence.py  summarizer.py
src/assistant/rag/: __init__.py  chunker.py  loader.py  pipeline.py  store.py
src/assistant/tools/: __init__.py  calculator.py  datetime_tool.py  document_search.py  registry.py  search.py
tests/: test_agent.py  test_api.py  test_client.py  test_cost.py  test_eval.py  test_memory.py  test_rag.py  test_tools.py
